# debt_vs_invest

./: .gitignore  LICENSE  README.md  pyproject.toml
debt_vs_invest/: app.py  launcher.py
