[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debt-vs-invest"
version = "0.1.0"
description = "Streamlit app to compare paying down debt vs investing surplus cash using Monte Carlo simulation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
keywords = ["finance", "debt", "investing", "monte-carlo", "streamlit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "altair>=5.0",
  "streamlit>=1.28",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/debt-vs-invest"
Repository = "https://github.com/YOUR_GITHUB_USERNAME/debt-vs-invest"

[project.scripts]
debt-vs-invest = "debt_vs_invest.launcher:main"
debt-vs-invest-cli = "debt_vs_invest.app:main_cli"
